--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Marck+Script&family=Montserrat:wght@500&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   --background-color: #ffffff;
@@ -53,7 +52,9 @@ h2 {
 }
 
 p {
-  font-size: 1.2em;
+  font-size: 1.35em;
+  font-family: 'Neucha', cursive;
+  /* font-style: oblique; */
 }
 
 button {
