--- a/style.css
+++ b/style.css
@@ -307,6 +307,32 @@ button.slide span{
   color: var(--on-background);
   min-height: calc(100vh - 70px);
   margin-top: 70px;
+  padding: 20px 40px;
+}
+
+#help-view h1 {
+  font-size: 10em;
+  text-align: center;
+  transform: rotate(-5deg);
+  text-shadow: 2px 2px var(--secondary-color);
+  color: var(--on-background);
+  margin: 0;
+}
+
+#help-view h2 {
+  font-size: 3em;
+  text-align: center;
+  text-shadow: 2px 2px var(--secondary-color);
+  color: var(--on-background);
+  /* margin: 0; */
+}
+
+#help-view h3 {
+  font-size: 2em;
+  /* text-align: center; */
+  /* text-shadow: 2px 2px var(--secondary-color); */
+  color: var(--on-background);
+  /* margin: 0; */
 }
 
 ::-webkit-scrollbar {
