--- a/style.css
+++ b/style.css
@@ -351,3 +351,12 @@ button.slide span{
 ::-webkit-scrollbar-thumb:hover {
   background: #222;
 }
+
+.instructions-images {
+  text-align: center;
+}
+
+.instructions-images img {
+  width: 40%;
+  border-radius: 3px;
+}
